<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_ingredients_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_quantity"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_ingredients_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:text="@string/ingredient_measure"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:text="@string/ingredients"
        android:textSize="18sp"/>


</LinearLayout>